# devagent

./: .coveragerc  .dependency-cruiser.cjs  .devagent.toml.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTONOMOUS_REPOSITORY_DEVELOPER.md  CONTRIBUTING.md  Makefile  README.md  REVIEW.md  SECURITY.md  SUPPORT.md  WORKFLOW.md  eslint.config.mjs  knip.json  lefthook.yml  node_modules  package.json  profile_repomap.py  pyproject.toml  requirements.txt  test_fastpath_fix.py  test_query_example.py  test_ranked_files_logic.py  test_react_types.py  test_repomap_optimizations.py  test_tool_invoker_fix.py  tsconfig.json  turbo.json  vitest.workspace.ts
.agents/skills/add-feature-e2e/: SKILL.md
.agents/skills/ci-triage-devagent/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/debug-test-failure/: SKILL.md
.agents/skills/execute-contract/: SKILL.md
.agents/skills/live-validation-authoring/: SKILL.md
.agents/skills/oss-surface-guard/: SKILL.md
.agents/skills/provider-adapter-change/: SKILL.md
.agents/skills/release-train/: SKILL.md
.agents/skills/review/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
ai_dev_agent/: __init__.py  tool_names.py
ai_dev_agent/agents/: __init__.py  base.py  enhanced_registry.py  executor.py  factory.py  registry.py  runtime.py  schemas.py  strategy_adapter.py  task_queue.py  task_queue_visualizer.py
ai_dev_agent/cli/: __init__.py  __main__.py  agent_commands.py  auto_agent_query.py  commands.py  context_enhancer.py  dynamic_context.py  memory_provider.py  review.py  review_context.py  router.py  utils.py
ai_dev_agent/core/: __init__.py  cache.py  failure_detector.py  repo_map.py
ai_dev_agent/dynamic_instructions/: __init__.py  ab_testing.py  manager.py  pattern_tracker.py  proposal_generator.py
ai_dev_agent/engine/: __init__.py
ai_dev_agent/lsp/: __init__.py  client.py  servers.py
ai_dev_agent/memory/: __init__.py  distiller.py  embeddings.py  store.py
ai_dev_agent/playbook/: __init__.py  curator.py  manager.py
ai_dev_agent/prompts/: __init__.py  loader.py  provider_prompts.py  validation.py
ai_dev_agent/providers/: __init__.py
ai_dev_agent/session/: __init__.py  context_service.py  context_synthesis.py  manager.py  models.py  prompt_builder.py  sanitizer.py  summarizer.py
ai_dev_agent/testing/: __init__.py  coverage_gate.py  coverage_report.py  fixtures.py  helpers.py  mocks.py
ai_dev_agent/tools/: __init__.py  agent_delegate.py  find.py  grep.py  names.py  patch_analysis.py  planning.py  registry.py  symbols.py
benchmarks/: README.md  __init__.py  agent_performance.py  benchmark_runner.py  framework.py  real_measurement_results.json  run_benchmarks.py  run_real_measurement.py  task_suite.py  test_cases.py
devagent-ts/: .gitignore  package.json  tsconfig.json
devagent-ts/models/: chatgpt.toml  copilot.toml  ollama.toml
devagent-ts/scripts/: install-lsp-servers.sh  verify-lsp.ts
examples/: budgeting_demo.py  work_planning_example.py
models/: anthropic.toml  chatgpt.toml  deepseek.toml  devagent-api.toml  ollama.toml  openai.toml  openrouter-anthropic.toml  openrouter-openai.toml  openrouter-other.toml
prompts/agents/: design.md  implementation.md  review.md  test.md
prompts/formats/: edit_block.md  unified_diff.md  whole_file.md
prompts/system/: base_context.md  error_handling.md  react_loop.md
rest_api/: README.md  requirements.txt
rest_api/app/: database.py  main.py
rest_api/tests/: test_auth.py  test_users.py
scripts/: bundle.ts  changelog.ts  check-oss.mjs  cleanup_unused_code.py  embed-assets.ts  install-lsp-servers.sh  live-validation.ts  run_tests.sh  smoke-publish-bundle.ts  tsconfig.json  verify-lsp.ts
scripts/live-validation/: execute-chain-lib.ts  execute-chain.test.ts  execute-chain.ts  execute-deep.test.ts  execute-deep.ts  isolation.ts  live-validation.test.ts  manifest.ts  provider-smoke.ts  reporting.ts  runner.ts  tool-script-adoption-fixture.ts  tool-script-adoption.ts  tui-validator.test.ts  tui-validator.ts  types.ts
scripts/surface-smoke/: cli-surface.test.ts
tests/: conftest.py  test_agent_bus.py  test_agent_bus_minimal.py  test_agent_integration.py  test_agent_planning_integration.py  test_agent_registry.py  test_agents_schemas.py  test_approval_policy.py  test_approvals.py  test_artifacts.py  test_auth_service_suite.py  test_backward_compatibility.py  test_base_agent.py  test_budget_control.py  test_budget_enhancements.py  test_cache.py  test_cli.py  test_cli_action_provider.py  test_cli_agent_commands_extended.py  test_cli_assist.py  test_cli_auto_agent_query.py  test_cli_chat.py  test_cli_e2e.py  test_cli_natural_language.py  test_cli_react_executor.py  test_cli_registry_handlers.py  test_cli_review_command.py  test_cli_router.py  test_cli_specialized_commands.py  test_cli_utils.py  test_cli_utils_simple.py  test_cli_verbosity_flags.py  test_code_editor.py  test_commands.py  test_commands_critical.py  test_config.py  test_context_budget_manager.py  test_context_enhancer.py  test_context_enhancer_simple.py  test_context_gatherer.py  (+60 more)
tests/cli/: test_cli_commands.py  test_cli_entrypoint.py  test_context_enhancer_scenarios.py  test_router_behavior.py
tests/compatibility/: test_work_planner_compatibility.py
tests/core/: test_budget_utils.py  test_devagent_config.py  test_failure_detector.py  test_patch_coverage.py  test_repo_map_integration.py  test_repo_map_scoring.py  test_retry_handler.py  test_settings_loader.py  test_summarizer_utils.py
tests/engine/: test_planner.py  test_tool_invoker.py
tests/integration/: __init__.py  conftest.py  test_constraint_context.py  test_edit_failure_modes.py  test_end_to_end.py  test_llm_e2e.py  test_prompt_system.py
tests/performance/: test_agent_metrics.py  test_agent_performance.py
tests/session/: test_context_synthesis.py  test_prompt_builder.py
tests/testing/: test_coverage_gate.py  test_coverage_reporter.py  test_helpers.py
tests/tools/: test_code_edit_integration.py  test_context_gatherer.py
tests/unit/: __init__.py  test_edit_error_feedback.py
(+329 files in other folders)
